--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     },
     "dependencies": {
         "ejs": "2.4.1",
-        "express": "4.13.3"
+        "express": "4.13.3",
+        "express-http-proxy": "0.10.0"
     },
     "repository": {
         "type": "git",
