--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "dependencies": {
         "ejs": "2.4.1",
         "express": "4.13.3",
-        "express-http-proxy": "0.10.0",
-        "valid-url": "1.0.9" 
+        "express-http-proxy": "0.10.0"
     },
     "repository": {
         "type": "git",
