--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "ejs": "2.4.1",
         "express": "4.13.3",
         "ytdl-core": "0.9.1",
+        "youtube-search": "1.0.8",
         "s3": "4.4.0"
     },
     "repository": {
