--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "express": "4.13.3",
         "ytdl-core": "0.9.1",
         "youtube-search": "1.0.8",
-        "mongoose": "^4.5.0"
+        "fluent-ffmpeg": "^2.1.0"
     },
     "repository": {
         "type": "git",
