--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "ejs": "2.4.1",
         "express": "4.13.3",
         "ytdl-core": "0.9.1",
-        "fluent-ffmpeg": "^2.1.0"
+        "fluent-ffmpeg": "2.1.0"
     },
     "repository": {
         "type": "git",
