--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "dmhacker-youtube",
   "description": "YouTube proxy that can fetch and play videos",
   "repository": "https://github.com/dmhacker/dmhacker-youtube",
-  "logo": "https://commons.wikimedia.org/wiki/File:Amazon_Alexa_App_Logo.png",
+  "image": "https://commons.wikimedia.org/wiki/File:Amazon_Alexa_App_Logo.png",
   "keywords": [
       "node",
       "heroku",
